# tree-sitter-zrpc

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-zrpc.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_zrpc/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterZrpc/: zrpc.h
bindings/swift/TreeSitterZrpcTests/: TreeSitterZrpcTests.swift
examples/: get_user.zrpc  user.zrpc
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
